Initialize Express server with CORS and JSON middleware

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1"
-  }
+  },
+  "scripts": {
+  "dev": "ts-node-dev index.ts"
+}
+
 }
